# RuleDSL-SDK

./: .gitattributes  .gitignore  CLAUDE.md  EVALUATION_TERMS.md  LICENSE  MANIFEST.txt  README.md  RELEASE_NOTES.md  VERSION.txt  linkedin_article_07.md
.github/workflows/: bundle-linux.yml  bundle-windows.yml  contract-gate.yml  doc-policy.yml  evidence-sanity.yml  pages.yml  public-surface.yml  pypi-publish.yml  release-guard.yml  release.yml  surface-integrity.yml  verify-canonical-header.yml  verify-canonical.yml  windows-fidelity.yml
Tools/contract_gate/: check_contract_gate.ps1
Tools/doc_policy_lint/: check_non_goal_claims.py  test_non_goal_claims.py
Tools/evidence_sanity/: scan_evidence.py
Tools/linkedin_carousel/: generate_slides.py
Tools/manifest/: check_manifest.py
Tools/pypi_package/: .gitignore  README-pypi.md  assemble.py  pyproject.toml
bundle/: LICENSE  NOTICE
docs/: README.md  bytecode_lifecycle.md  bytecode_workflow_v0_9.md  capabilities.md  commercial_handoff.md  compatibility_matrix.md  contact.md  contributing_notes.md  determinism_value_model.md  distribution.md  error_code_registry.md  errors.md  evaluation_engagement_model.md  evaluation_playbook.md  github_metadata.md  integration_operational_model.md  integration_snippets.md  migration_and_lockin_model.md  ownership_contract.md  pricing.md  product_brief.md  product_offer_definition.md  quickstart.md  release_audit_summary_plan.md  release_gate.md  replay_contract.md  rule_cookbook.md  sdk_struct_contract.md  signing_policy.md  signing_runbook.md  support_policy.md  technical_positioning.md  thread_safety_model.md  troubleshooting.md  version_policy.md
reports/: pre_push_verification.md  public_repo_polish_report.md
site/: index.html
(+236 files in other folders)
